Build/modernize qa stack nullaway (#163)
* build: modernize QA stack to Error Prone + NullAway on JDK 25

Migrate the build/QA tooling to the modern IES stack and replace
SpotBugs with compile-time null-safety enforcement.

- Java 25: maven.compiler.release and enforcer requireJavaVersion -> 25
- Add .mvn/jvm.config with the jdk.compiler --add-exports/--add-opens
  required by Error Prone on JDK 16+
- Error Prone 2.50.0 + NullAway 0.13.7 (JSpecify mode) in the
  maven-compiler-plugin; NullAway disabled for test code via a
  default-testCompile execution override; drop -proc:none
- Remove SpotBugs: plugin, spotbugs-annotations dependency, version
  property, spotbug-exclude-filter.xml and all @SuppressFBWarnings usages
- JSpecify: jspecify 1.0.0 (optional) in parent and child POMs,
  requires static org.jspecify + @NullMarked on every module
- Pin PMD to 7.16.0 (pmd-core/pmd-java) for JDK 25 support
- Resolve NullAway findings: @SuppressWarnings("NullAway.Init") on
  builders, @Nullable on genuinely-optional fields/accessors
- Update CLAUDE.md to reflect Java 25 and the Error Prone/NullAway stack

CI needs no workflow change: the reusable sitepark workflows derive the
JDK version from maven.compiler.release in pom.xml.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>

* build: fail build on Error Prone warnings (-Werror)

Promote all Error Prone warnings to build errors via the javac -Werror
flag in the main compilerArgs (Error Prone honors -Werror). The
default-testCompile override does not carry -Werror, so test code stays
lenient, consistent with NullAway being OFF for tests.

Fix the 7 pre-existing ObjectEqualsForPrimitives findings first so the
build stays green: compare primitive fields (int/boolean) with == instead
of Objects.equals, which needlessly boxes both operands. Object-typed
fields keep Objects.equals; hashCode keeps Objects.hash.

Affected: LinkCheckerLink (timeout), LinkCheckerConfig (enabled, timeout,
parallel), LinkCheckerResu